[CZID-9277] Update schema (#171)
* Add schema updates, still need migration script

* More changes

* Add index files

* Cleanup

* Remove deleted entities

* Small fix

* Remove Contigs

* Rename 2dArrayInt to avoid mermaid error

* Fix tests

--- a/entities/cerbos/policies/index_file.yaml
+++ b/entities/cerbos/policies/index_file.yaml
@@ -6,7 +6,7 @@ resourcePolicy:
   version: "default"
   importDerivedRoles:
     - common_roles
-  resource: "contig"
+  resource: "index_file"
   rules:
     - actions: ['view', 'create', 'update']
       effect: EFFECT_ALLOW
