--- a/platformics/codegen/tests/test_schemas/platformics.yaml
+++ b/platformics/codegen/tests/test_schemas/platformics.yaml
@@ -139,7 +139,7 @@ classes:
       collection_location:
         range: string
         required: true
-      description:
+      notes:
         range: string
       sequencing_reads:
         range: SequencingRead
@@ -172,10 +172,6 @@ classes:
       primer_file:
         range: GenomicRange
         inverse: GenomicRange.sequencing_reads
-      contigs:
-        range: Contig
-        inverse: Contig.sequencing_read
-        multivalued: true
       clearlabs_export:
         range: boolean
         required: true
@@ -198,19 +194,6 @@ classes:
         multivalued: true
     annotations:
       plural: GenomicRanges
-
-  Contig:
-    is_a: Entity
-    mixins:
-      - EntityMixin
-    attributes:
-      sequencing_read:
-        range: SequencingRead
-        inverse: Sample.contigs
-      sequence:
-        required: true
-    annotations:
-      plural: Contigs
 
   Taxon:
     is_a: Entity
