--- a/workflows/.happy/config.json
+++ b/workflows/.happy/config.json
@@ -12,7 +12,73 @@
                 "auth_method": "eks"
             },
             "terraform_directory": ".happy/terraform/envs/dev",
-            "task_launch_type": "k8s"
+            "task_launch_type": "k8s",
+            "stack_overrides": {
+                "additional_env_vars": {
+                    "AWS_REGION": "us-west-2",
+                    "BOTO_ENDPOINT_URL": "http://motoserver.czidnet:4000",
+                    "CERBOS_URL": "http://localhost:3592",
+                    "DEFAULT_UPLOAD_BUCKET": "local-bucket",
+                    "DEFAULT_UPLOAD_PROTOCOL": "s3",
+                    "JWK_PRIVATE_KEY_FILE": "/czid-platformics/entities/test_infra/fixtures/private_key.pem",
+                    "JWK_PUBLIC_KEY_FILE": "/czid-platformics/entities/test_infra/fixtures/public_key.pem",
+                    "WORKERS": "2"
+                },
+                "emptydir_volumes": [
+                    {
+                        "name": "policies",
+                        "parameters": {
+                            "size_limit": "100Mi"
+                        }
+                    }
+                ],
+                "services": {
+                    "entities": {
+                        "cpu": "2",
+                        "health_check_path": "/graphql",
+                        "init_containers": {
+                            "init": {
+                                "cmd": [
+                                    "cp",
+                                    "-r",
+                                    "/czid-platformics/entities/cerbos/",
+                                    "/var/policies/"
+                                ],
+                                "image": "{entities}",
+                                "tag": "${var.image_tag}"
+                            }
+                        },
+                        "memory": "1000Mi",
+                        "service_type": "INTERNAL",
+                        "sidecars": {
+                            "cerbos": {
+                                "args": [
+                                    "server",
+                                    "--config",
+                                    "/var/policies/cerbos/config/config.yaml"
+                                ],
+                                "cpu": "100m",
+                                "image": "ghcr.io/cerbos/cerbos",
+                                "memory": "300Mi",
+                                "port": 3592,
+                                "tag": "0.29.0"
+                            }
+                        }
+                    }
+                },
+                "source": "git@github.com:chanzuckerberg/happy//terraform/modules/happy-stack-eks?ref=rlim/ephemeral-volume-support",
+                "tasks": {
+                    "migrate": {
+                        "cmd": [
+                            "/czid-platformics/entities/scripts/migrate.sh"
+                        ],
+                        "cpu": "100m",
+                        "image": "{entities}:${var.image_tag}",
+                        "memory": "1000Mi",
+                        "platform_architecture": "arm64"
+                    }
+                }
+            }
         },
         "sandbox": {
             "aws_profile": "idseq-dev",
@@ -37,13 +103,19 @@
             "task_launch_type": "k8s"
         }
     },
+    "tasks": {
+        "migrate": [
+            "migrate"
+        ]
+    },
     "services": [
         "workflows"
     ],
     "features": {
         "enable_dynamo_locking": true,
         "enable_happy_api_usage": true,
-        "enable_ecr_auto_creation": true
+        "enable_ecr_auto_creation": true,
+        "enable_unified_config": true
     },
     "api": {},
     "stack_defaults": {
@@ -55,19 +127,14 @@
                     "context": ".",
                     "dockerfile": "Dockerfile"
                 },
-                "name": "workflows",
-                "memory": "1000Mi",
                 "cpu": "2",
+                "memory": "1000Mi",
+                "name": "workflows",
                 "platform_architecture": "arm64",
                 "port": 8042,
                 "service_type": "INTERNAL"
             }
         },
         "stack_defaults": "git@github.com:chanzuckerberg/happy//terraform/modules/happy-stack-eks?ref=main"
-    },
-    "tasks": {
-        "migrate": [
-            "migrate"
-        ]
     }
 }
