--- a/workflows/pyproject.toml
+++ b/workflows/pyproject.toml
@@ -60,7 +60,14 @@ explicit_package_bases = true
 ignore_missing_imports = true
 disallow_untyped_defs = true
 implicit_reexport = true
-exclude = ['gql_schema\.py$', '^platformics/thirdparty', '^platformics/codegen', '^platformics/api/core/helpers.py'] # TODO: fix helper types and remove
+exclude = [
+    'gql_schema\.py$',
+    '^platformics/thirdparty',
+    '^platformics/codegen',
+    '^platformics/client',
+    '^platformics/api/core/helpers.py',
+    "terraform_test/.terraform/",
+] # TODO: fix helper types and remove
 
 [tool.ruff]
 # Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
