--- a/entities/schema/platformics.yaml
+++ b/entities/schema/platformics.yaml
@@ -337,9 +337,10 @@ classes:
         range: File
       name:
         range: string
-      consensus_genome:
+        required: true
+      consensus_genomes:
         range: ConsensusGenome
-          range: ConsensusGenome.reference_genome
+        inverse: ConsensusGenome.reference_genome
         multivalued: true
     annotations:
       plural: ReferenceGenomes
@@ -354,15 +355,17 @@ classes:
     attributes:
       accession_id:
         range: string
+        required: true
       accession_name:
         range: string
+        required: true
       upstream_database:
         range: UpstreamDatabase
         required: true
         inverse: UpstreamDatabase.accessions
-      consensus_genome:
+      consensus_genomes:
         range: ConsensusGenome
-          range: ConsensusGenome.reference_genome
+        inverse: ConsensusGenome.accession
         multivalued: true
     annotations:
       plural: Accessions
@@ -449,12 +452,12 @@ classes:
         required: true
         inverse: SequencingRead.consensus_genomes
       # Must specify a reference sequence or accession for a CG run
-      reference_sequence:
+      reference_genome:
         range: ReferenceGenome
-        inverse: ReferenceGenome.sequencing_reads
+        inverse: ReferenceGenome.consensus_genomes
       accession:
         range: Accession
-        inverse: Accession.consensus_genome
+        inverse: Accession.consensus_genomes
       # Consensus Genome sequence output by CG pipeline
       sequence:
         range: File
@@ -592,6 +595,10 @@ classes:
         range: IndexFile
         multivalued: true
         inverse: IndexFile.upstream_database
+      accessions:
+        range: Accession
+        inverse: Accession.upstream_database
+        multivalued: true
     annotations:
       plural: UpstreamDatabases
 
