--- a/workflows/schema/workflows.yaml
+++ b/workflows/schema/workflows.yaml
@@ -51,21 +51,31 @@ classes:
         identifier: true
         range: uuid
       producing_run_id:
-        range: int
+        range: uuid
         minimum_value: 0
+        annotations:
+          mutable: false  # This field can't be modified by an `Update` mutation
+          system_writable_only: True
       owner_user_id:
         range: int
         minimum_value: 0
+        annotations:
+          mutable: false
       collection_id:
         range: int
         minimum_value: 0
+        annotations:
+          mutable: false
       created_at:
         range: date
         required: true
+        readonly: true
       updated_at:
         range: date
+        readonly: true
       deleted_at:
         range: date
+        readonly: true
     # NOTE - the LinkML schema doesn't support a native "plural name" field as far as I can tell, so
     # we're using an annotation here to tack on the extra functionality that we need. We do this because
     # English pluralization is hard, and we don't want to have to write a custom pluralization function.
@@ -195,4 +205,6 @@ classes:
         range: uuid
         identifier: true
         inverse: entity.id
+        annotations:
+          hidden: true
 
