--- a/entities/cerbos/policies/bulk_download.yaml
+++ b/entities/cerbos/policies/bulk_download.yaml
@@ -8,6 +8,11 @@ resourcePolicy:
     - common_roles
   resource: "bulk_download"
   rules:
+    - actions: ['view']
+      effect: EFFECT_ALLOW
+      derivedRoles:
+        - project_viewer
+
     - actions: ['view', 'create', 'update']
       effect: EFFECT_ALLOW
       derivedRoles:
