--- a/entities/cerbos/policies/derived_roles_common.yaml
+++ b/entities/cerbos/policies/derived_roles_common.yaml
@@ -18,3 +18,11 @@ derivedRoles:
             of:
               - expr: request.resource.attr.collection_id in request.principal.attr.member_projects
               - expr: request.resource.attr.collection_id in request.principal.attr.admin_projects
+
+    - name: project_viewer
+      parentRoles: ["user"]
+      condition:
+        match:
+          any:
+            of:
+              - expr: request.resource.attr.collection_id in request.principal.attr.viewer_projects
