--- a/entities/cerbos/policies/host_organism.yaml
+++ b/entities/cerbos/policies/host_organism.yaml
@@ -8,6 +8,11 @@ resourcePolicy:
     - common_roles
   resource: "host_organism"
   rules:
+    - actions: ['view']
+      effect: EFFECT_ALLOW
+      derivedRoles:
+        - project_viewer
+
     - actions: ['view', 'create', 'update']
       effect: EFFECT_ALLOW
       derivedRoles:
