--- a/workflows/cerbos/policies/derived_roles_common.yaml
+++ b/workflows/cerbos/policies/derived_roles_common.yaml
@@ -24,3 +24,11 @@ derivedRoles:
       condition:
         match:
           expr: request.resource.attr.collection_id in request.principal.attr.admin_projects
+
+    - name: project_viewer
+      parentRoles: ["user"]
+      condition:
+        match:
+          any:
+            of:
+              - expr: request.resource.attr.collection_id in request.principal.attr.viewer_projects
