--- a/platformics/codegen/tests/test_schemas/platformics.yaml
+++ b/platformics/codegen/tests/test_schemas/platformics.yaml
@@ -85,7 +85,7 @@ classes:
         range: uuid
         readonly: true # The API handles generating the values for these fields
       producing_run_id:
-        range: int
+        range: uuid
         minimum_value: 0
         annotations:
           mutable: false  # This field can't be modified by an `Update` mutation
@@ -174,6 +174,10 @@ classes:
         range: SequencingRead
         multivalued: true
         inverse: SequencingRead.sample
+      system_mutable_field:
+        range: string
+        annotations:
+          system_writable_only: True
     annotations:
       plural: Samples
 
